<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#C53636"
    android:layout_height="match_parent"
    tools:context=".RegistrationOptions">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        android:background="#fff"
        app:cardElevation="10dp"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@null"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:src="@drawable/logo_lifestream"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/give_hope_give_life_give_blood"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_would_you_like_to_register_as"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/register_donor_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@null"
                    android:background="@drawable/button_background"
                    android:text="@string/donor_registration"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    />

                <Button
                    android:id="@+id/register_recipient_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:backgroundTint="@null"
                    android:text="@string/recipient_registration"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"/>

                <TextView
                    android:id="@+id/back_signin_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/already_signed_up_log_in"
                    android:gravity="center"/>

            </LinearLayout>




        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>