<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".UpdateProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        android:elevation="40dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/update_profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/registration_profile_image"
        app:civ_border_width="0dp"
        app:civ_border_color="#FF000000"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_full_name"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputLayoutStyle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextAppearance="@color/mainColor">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_full_name"
            android:drawablePadding="10dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:textColorHint="#000"
            android:drawableStart="@drawable/ic_register_person"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:counterMaxLength="11"
        android:theme="@style/TextInputLayoutStyle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextAppearance="@color/mainColor">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            android:maxLength="11"
            android:maxLines="1"
            android:drawablePadding="10dp"
            android:textColor="#000"
            android:inputType="number"
            android:textSize="18sp"
            android:textColorHint="#000"
            android:drawableStart="@drawable/ic_register_phone"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:theme="@style/TextInputLayoutStyle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextAppearance="@color/mainColor">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_address"
            android:drawablePadding="10dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:textColorHint="#000"
            android:drawableStart="@drawable/ic_email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:theme="@style/TextInputLayoutStyle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextAppearance="@color/mainColor">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_password"
            android:drawablePadding="10dp"
            android:textColor="#000"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:textColorHint="#000"
            android:drawableStart="@drawable/ic_password"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        android:theme="@style/TextInputLayoutStyle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextAppearance="@color/mainColor">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:drawablePadding="10dp"
        android:textColor="#000"
        android:textSize="18sp"
        android:textColorHint="#000"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/update_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:backgroundTint="@null"
        android:text="@string/update_profile"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"/>


</LinearLayout>