<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#C53636"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        android:background="#fff"
        app:cardElevation="10dp"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@null"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:src="@drawable/logo_lifestream"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lifestream_user_login"
                android:textColor="#000"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:theme="@style/TextInputLayoutStyle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintTextAppearance="@color/mainColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email_address"
                        android:drawablePadding="10dp"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textColorHint="#000"
                        android:drawableStart="@drawable/ic_email"/>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    android:theme="@style/TextInputLayoutStyle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintTextAppearance="@color/mainColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:drawablePadding="10dp"
                        android:textColor="#000"
                        android:inputType="textPassword"
                        android:textSize="18sp"
                        android:textColorHint="#000"
                        android:drawableStart="@drawable/ic_password"/>


                </com.google.android.material.textfield.TextInputLayout>




                <Button
                    android:id="@+id/login_submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:backgroundTint="@null"
                    android:text="@string/login"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"/>

                <TextView
                    android:id="@+id/register_button_from_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="#000"
                    android:onClick="Go_To_Registration_Page"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/not_registered_yet_sign_up"
                    android:gravity="center"/>




            </LinearLayout>




        </LinearLayout>
    </androidx.cardview.widget.CardView>


</ScrollView>