<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#C53636"
    tools:context=".DononRegistrationActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        android:background="#fff"
        app:cardElevation="10dp"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@null"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:src="@drawable/logo_lifestream"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lifestream_user_registration"
                android:textColor="#000"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/reg_profile_picture"
                    app:civ_border_width="0dp"
                    app:civ_border_color="#FF000000"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/register_user_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/spinner_background"
                    android:entries="@array/user_type"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_full_name"
                    android:layout_width="match_parent"
                    app:errorEnabled="true"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutStyle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintTextAppearance="@color/mainColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_full_name"
                        android:drawablePadding="10dp"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textColorHint="#000"
                        android:drawableStart="@drawable/ic_register_person"/>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:counterMaxLength="11"
                    android:theme="@style/TextInputLayoutStyle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintTextAppearance="@color/mainColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_phone_number"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:drawablePadding="10dp"
                        android:textColor="#000"
                        android:inputType="number"
                        android:textSize="18sp"
                        android:textColorHint="#000"
                        android:drawableStart="@drawable/ic_register_phone"/>


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:theme="@style/TextInputLayoutStyle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintTextAppearance="@color/mainColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email_address"
                        android:drawablePadding="10dp"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textColorHint="#000"
                        android:drawableStart="@drawable/ic_email"/>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    android:theme="@style/TextInputLayoutStyle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintTextAppearance="@color/mainColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:drawablePadding="10dp"
                        android:textColor="#000"
                        android:inputType="textPassword"
                        android:textSize="18sp"
                        android:textColorHint="#000"
                        android:drawableStart="@drawable/ic_password"/>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:errorEnabled="true"
                    android:theme="@style/TextInputLayoutStyle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintTextAppearance="@color/mainColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:drawablePadding="10dp"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textColorHint="#000"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/ic_password"/>


                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/register_blood_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_gravity="center"
                    android:background="@drawable/spinner_background"
                    android:entries="@array/blood_groups"/>

                <Button
                    android:id="@+id/register_user_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:backgroundTint="@null"
                    android:onClick="get_user_location"
                    android:text="@string/select_location"
                    android:layout_gravity="start"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"/>



                <Button
                    android:id="@+id/register_submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:backgroundTint="@null"
                    android:text="@string/sign_up"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"/>

                <TextView
                    android:id="@+id/back_signin_button_from_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="Go_To_Login_Page"
                    android:layout_marginTop="15dp"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/already_signed_up_log_in"
                    android:gravity="center"/>




            </LinearLayout>




        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>